--- a/index.html
+++ b/index.html
@@ -41,5 +41,15 @@
   </div>
 
   <script src="script.js"></script>
+
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('sw.js')
+        .then(reg => console.log('SW registered'))
+        .catch(err => console.error('SW registration failed', err));
+    });
+  }
+</script>
 </body>
 </html>
